--- a/frontend/STYLE/home.scss
+++ b/frontend/STYLE/home.scss
@@ -67,14 +67,14 @@
 
 // faithful-hearts
 .faithful-hearts {
-  background-image: url("./image/home-page/faithful-hearts/bible-book-bg.png");
+  background-image: url('../Asserts/image/home-page/faithful-hearts/bible-book-bg.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 //potential-about
 .potential-about-blog {
-  background-image: url("./image/home-page/potential-about/fort-bg.png");
+  background-image: url("../Asserts/image/home-page/potential-about/fort-bg.png");
   background-repeat: no-repeat;
 }
 
@@ -118,7 +118,7 @@
 
 //getting-stronger
 .growing-stronger-bg {
-  background-image: url("./image/home-page/growing-stronger/stronger-bg.png");
+  background-image: url("../Asserts/image/home-page/growing-stronger/stronger-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -180,7 +180,7 @@
 //footer
 
 .footer-sec {
-  background-image: url("../image/home-page/footer/footer.png");
+  background-image: url("../Asserts/image/home-page/footer/footer.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top right;
@@ -205,6 +205,11 @@
 }
 
 @media (min-width: 576px) {
+
+  .content-family {
+    font-size: 14px;
+  }
+
   .the-lord-main {
     .customer-review {
       .client-review-img {
@@ -220,7 +225,12 @@
   }
 
   .content-family {
-    font-size: 14px;
+    font-size: 0.9rem;
+  }
+
+  .heading-text {
+    font-weight: 600;
+    font-size: 34px;
   }
 
   .the-lord-main {
@@ -244,7 +254,6 @@
 
 @media (min-width: 992px) {
   .heading-text {
-    font-family: Roboto Serif;
     font-weight: 600;
     font-size: 38px;
     width: 90%;
