--- a/frontend/STYLE/Pages/Faq.css
+++ b/frontend/STYLE/Pages/Faq.css
@@ -42,6 +42,25 @@
   width: 10%;
 }
 
+button.accordion-button:not(.collapsed) {
+  background-color: white !important;
+  color: black !important;
+}
+button.accordion-button:focus {
+  color: black;
+  background-color: white;
+  box-shadow: none;
+  outline: none;
+}
+button.accordion-button::after {
+  rotate: 180deg !important;
+}
+
+.accordion-index {
+  border: 1px solid rgb(182, 178, 178);
+  color: black;
+}
+
 @media (min-width: 768px) {
   .carousel-container {
     aspect-ratio: 5/2;
