--- a/frontend/STYLE/home.css
+++ b/frontend/STYLE/home.css
@@ -7,6 +7,24 @@
 }
 
 /*generic-classes*/
+.tags-color:hover {
+  background-color: #c0304f !important;
+  color: white !important;
+  border: 1px solid white !important;
+}
+
+.red-hover {
+  border-bottom: 2px solid transparent !important;
+  border-radius: 0px !important;
+}
+.red-hover:hover {
+  border-bottom: 2px solid #c0304f !important;
+}
+
+#map {
+  height: 25rem;
+}
+
 .padding-section {
   padding: 0 3% !important;
 }
